# Graph-Isomorphism-Project

./: .gitignore  CMakeLists.txt  README.md  Sketch Algorithm.cpp
Documentation/Entrega/Pruebas/: Grafo1B.txt
GraphIsomorphisim_Version_1.0/: Graph.cpp  GraphIsomorphisim_Version_1.0.sln  ReadInput.cpp  VertexAdjacencyList.h  main-temp.cpp
GraphIsomorphisim_Version_1.0/Cases/: Grafo15B.txt  Grafo8B.txt
GraphIsomorphisim_Version_1.0/Debug/: GraphIsomorphisim_Version_1.0.ilk
GraphIsomorphisim_Version_1.0/GraphIsomorphisim_Version_1.0/: Graph.cpp  Graph.h  GraphIsomorphisim_Version_1.0.vcxproj  GraphIsomorphisim_Version_1.0.vcxproj.filters  Main.cpp  ReadInput.cpp  ReadInput.h  SinglyLinkedList.cpp  SinglyLinkedList.h  VertexAdjacencyList.cpp  VertexAdjacencyList.h
GraphIsomorphisim_Version_1.0/GraphIsomorphisim_Version_1.0/Batería de pruebas/: Grafo1.txt  Grafo13B.txt  Grafo1A.txt  Grafo1B.txt  Grafo4B.txt  GrafoOriginalA.txt  GrafoOriginalB.txt
GraphIsomorphisim_Version_1.0/GraphIsomorphisim_Version_1.0/Debug/: graph.obj.enc  readinput.obj.enc  vc140.idb
GraphIsomorphisim_Version_1.0/GraphIsomorphisim_Version_1.0/Debug/GraphIso.C9EF7389.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GraphIsomorphisim_Version_1.0.lastbuildstate  link.command.1.tlog  link.read.1.tlog  (+1 more)
GraphIsomorphisim_Version_1.0/GraphIsomorphisim_Version_1.0/Pruebas/: Grafo10A.txt  Grafo11A.txt  Grafo12B.txt  Grafo14A.txt  Grafo15A.txt  Grafo2B.txt  Grafo6A.txt  Grafo7A.txt  Grafo8A.txt
Legacy_Docs/Entrega/Pruebas/: Grafo14B.txt
Sketch_Algorithm_Pseudocode_Notes/: README.md  Sketch.cpp
tests/: CMakeLists.txt  GraphCasesTest.cpp  GraphIsomorphismTest.cpp  GraphTest.cpp  ReadInputTest.cpp  VertexAdjacencyListTest.cpp
(+27 files in other folders)
